--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - '9292:9292'
     volumes:
       - '.:/onebitcode_chatbot'
+    environment:
+      - LANG=C.UTF-8
 
 volumes:
   postgres:
